[gd_scene load_steps=6 format=2]

[ext_resource path="res://Misc/Fonts/Mostwasted.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Misc/Themes/Main.tres" type="Theme" id=2]
[ext_resource path="res://Screens/Menu/Menu.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
margin_left = 324.0
margin_top = 155.0
margin_right = 700.0
margin_bottom = 445.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Main/VBoxContainer"]
margin_right = 376.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.764706, 0, 1 )
text = "BAD STARS 2"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Main/VBoxContainer"]
margin_top = 120.0
margin_right = 376.0
margin_bottom = 290.0
custom_constants/separation = 10

[node name="Play" type="Button" parent="Main/VBoxContainer/VBoxContainer"]
margin_right = 376.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "Play"

[node name="Options" type="Button" parent="Main/VBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 376.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 50 )
text = "Options"

[node name="Quit" type="Button" parent="Main/VBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 376.0
margin_bottom = 170.0
rect_min_size = Vector2( 100, 50 )
text = "Quit"

[node name="Play" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Play"]
margin_left = 362.0
margin_top = 206.0
margin_right = 662.0
margin_bottom = 394.0
custom_constants/separation = 20

[node name="Host" type="Button" parent="Play/VBoxContainer"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "Host Game"

[node name="Join" type="Button" parent="Play/VBoxContainer"]
margin_top = 70.0
margin_right = 300.0
margin_bottom = 120.0
rect_min_size = Vector2( 200, 50 )
text = "Join Game"

[node name="IP" type="LineEdit" parent="Play/VBoxContainer"]
margin_top = 140.0
margin_right = 300.0
margin_bottom = 188.0
rect_min_size = Vector2( 300, 0 )
placeholder_text = "IP Address"
[connection signal="pressed" from="Main/VBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Play/VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Play/VBoxContainer/Join" to="." method="_on_Join_pressed"]
